first jab at saving intermediate artifacts

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SERPER_API_KEY="e7ad7efe4d42e9e9692b93188ef6a61180616abe"
 LITELLM_API_KEY="sk-RG-FxDXC3TZW5eEQsUPdhg"
 LITELLM_API_BASE="https://cs224v-litellm.genie.stanford.edu"
+OPENAI_API_KEY="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"
